--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="hidden" name="form-name" value="contact" />
         <input type="text" name="name" />
         <input type="email" name="email" />
+        <input type="tel" name="phone" />
         <textarea name="message"></textarea>
       </form>
 
