SEO: add essential meta, robots.txt, structured data; perf tweaks (webp, lazy images); build minify

--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>DineTalk Website Layout</title>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+      <title>AI Restaurant Receptionist | DineTalk Australia</title>
+      <meta name="description" content="DineTalk automates restaurant calls, bookings, and orders 24/7 using conversational AI built for Australian venues.">
+      <meta name="keywords" content="AI restaurant receptionist, restaurant phone answering, restaurant booking system Australia">
+      <link rel="canonical" href="https://dinetalk.com.au/">
+      <meta name="robots" content="index, follow">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "DineTalk",
+        "applicationCategory": "BusinessApplication",
+        "url": "https://dinetalk.com.au",
+        "description": "AI-powered receptionist and ordering system for restaurants in Australia.",
+        "creator": {"@type": "Organization","name": "DineTalk"},
+        "offers": {"@type": "Offer","price":"0.00","priceCurrency":"AUD"}
+      }
+      </script>
+
+      <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </head>
 
     <body>
