--- a/index.html
+++ b/index.html
@@ -4,30 +4,10 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>DineTalk | AI-Powered Restaurant Receptionist &amp; Booking System</title>
-      <meta
-        name="description"
-        content="DineTalk is an AI-powered restaurant receptionist that answers calls, takes bookings, and integrates with POS systems – automating your front of house experience."
-      />
-      <meta
-        name="keywords"
-        content="AI receptionist, restaurant booking, hospitality AI, dine talk, restaurant automation"
-      />
+      <title>DineTalk</title>
       <meta name="robots" content="index, follow" />
-      <meta name="author" content="DineTalk Australia" />
       <meta name="geo.region" content="AU" />
       <meta name="geo.placename" content="Perth, Western Australia" />
-      <link rel="canonical" href="https://dinetalk.com.au/" />
-
-      <meta property="og:title" content="DineTalk – AI Restaurant Receptionist &amp; Ordering System" />
-      <meta
-        property="og:description"
-        content="Automate your bookings and calls – 24/7 AI-powered receptionist for restaurants."
-      />
-      <meta property="og:image" content="https://dinetalk.com.au/assets/og-image.jpg" />
-      <meta property="og:url" content="https://dinetalk.com.au" />
-      <meta property="og:type" content="website" />
-      <meta name="twitter:card" content="summary_large_image" />
 
       <link rel="icon" type="image/png" sizes="16x16" href="https://dinetalk.com.au/favicon-16x16.png" />
       <link rel="icon" type="image/png" sizes="32x32" href="https://dinetalk.com.au/favicon-32x32.png" />
@@ -50,37 +30,6 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Inter:wght@400;500&display=swap"
       />
-
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-XXXXXXX');
-      </script>
-
-      <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "Organization",
-          "name": "DineTalk",
-          "url": "https://dinetalk.com.au",
-          "logo": "https://dinetalk.com.au/assets/logo.png",
-          "sameAs": [
-            "https://www.instagram.com/dinetalk_ai",
-            "https://www.linkedin.com/company/dinetalk"
-          ],
-          "contactPoint": {
-            "@type": "ContactPoint",
-            "telephone": "+61 400 000 000",
-            "contactType": "Customer Support",
-            "areaServed": "AU",
-            "availableLanguage": "English"
-          }
-        }
-      </script>
 
       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </head>
