Improve contact UX and responsive accessibility

--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
       <meta property="og:type" content="website" />
       <meta name="twitter:card" content="summary_large_image" />
 
-      <link rel="icon" type="image/png" sizes="16x16" href="https://dinetalk.com.au/favicon-16x16.png" />
-      <link rel="icon" type="image/png" sizes="32x32" href="https://dinetalk.com.au/favicon-32x32.png" />
-      <link rel="apple-touch-icon" sizes="180x180" href="https://dinetalk.com.au/apple-touch-icon.png" />
-      <link rel="icon" href="https://dinetalk.com.au/favicon.ico" />
+      <meta name="theme-color" content="#ff9936" />
+      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
