--- a/index.html
+++ b/index.html
@@ -1,70 +1,74 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DineTalk | AI-Powered Restaurant Receptionist &amp; Booking System</title>
+    <meta
+      name="description"
+      content="DineTalk is an AI-powered restaurant receptionist that answers calls, takes bookings, and integrates with POS systems – automating your front of house experience."
+    />
+    <meta
+      name="keywords"
+      content="AI receptionist, restaurant booking, hospitality AI, dine talk, restaurant automation"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="DineTalk Australia" />
+    <meta name="geo.region" content="AU" />
+    <meta name="geo.placename" content="Perth, Western Australia" />
+    <link rel="canonical" href="https://dinetalk.com.au/" />
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>DineTalk | AI-Powered Restaurant Receptionist &amp; Booking System</title>
-      <meta
-        name="description"
-        content="DineTalk is an AI-powered restaurant receptionist that answers calls, takes bookings, and integrates with POS systems – automating your front of house experience."
-      />
-      <meta
-        name="keywords"
-        content="AI receptionist, restaurant booking, hospitality AI, dine talk, restaurant automation"
-      />
-      <meta name="robots" content="index, follow" />
-      <meta name="author" content="DineTalk Australia" />
-      <meta name="geo.region" content="AU" />
-      <meta name="geo.placename" content="Perth, Western Australia" />
-      <link rel="canonical" href="https://dinetalk.com.au/" />
+    <meta property="og:title" content="DineTalk – AI Restaurant Receptionist &amp; Ordering System" />
+    <meta
+      property="og:description"
+      content="Automate your bookings and calls – 24/7 AI-powered receptionist for restaurants."
+    />
+    <meta property="og:image" content="https://dinetalk.com.au/assets/og-image.jpg" />
+    <meta property="og:url" content="https://dinetalk.com.au" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-      <meta property="og:title" content="DineTalk – AI Restaurant Receptionist &amp; Ordering System" />
-      <meta
-        property="og:description"
-        content="Automate your bookings and calls – 24/7 AI-powered receptionist for restaurants."
-      />
-      <meta property="og:image" content="https://dinetalk.com.au/assets/og-image.jpg" />
-      <meta property="og:url" content="https://dinetalk.com.au" />
-      <meta property="og:type" content="website" />
-      <meta name="twitter:card" content="summary_large_image" />
+    <meta name="theme-color" content="#ff9936" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-      <meta name="theme-color" content="#ff9936" />
-      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Inter:wght@400;500&display=swap"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1758216169108-d1b62d114582?crop=entropy&cs=tinysrgb&fit=max&fm=webp&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxyZXN0YXVyYW50JTIwcGhvbmUlMjBjYWxsfGVufDF8fHx8MTc2MTE4MjczNHww&ixlib=rb-4.1.0&q=80&w=1400"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Inter:wght@400;500&display=swap"
+    />
 
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        rel="preload"
-        as="style"
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Inter:wght@400;500&display=swap"
-      />
-      <link
-        rel="preload"
-        as="image"
-        href="https://images.unsplash.com/photo-1758216169108-d1b62d114582?crop=entropy&cs=tinysrgb&fit=max&fm=webp&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxyZXN0YXVyYW50JTIwcGhvbmUlMjBjYWxsfGVufDF8fHx8MTc2MTE4MjczNHww&ixlib=rb-4.1.0&q=80&w=1400"
-      />
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Inter:wght@400;500&display=swap"
-      />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXX');
+    </script>
 
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-XXXXXXX');
-      </script>
+    <!-- Preload hero image and main font for faster first paint -->
+    <link rel="preload" as="image" href="/assets/hero.webp" fetchpriority="high" />
+    <link
+      rel="preload"
+      as="font"
+      href="/assets/fonts/Poppins-Bold.woff2"
+      type="font/woff2"
+      crossorigin
+    />
 
-<<<<<<< HEAD
-  <!-- Preload hero image and main font for faster first paint -->
-  <link rel="preload" as="image" href="/assets/hero.webp" fetchpriority="high">
-  <link rel="preload" as="font" href="/assets/fonts/Poppins-Bold.woff2" type="font/woff2" crossorigin>
-
-  <script type="application/ld+json">
+    <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "SoftwareApplication",
@@ -72,49 +76,26 @@
         "applicationCategory": "BusinessApplication",
         "url": "https://dinetalk.com.au",
         "description": "AI-powered receptionist and ordering system for restaurants in Australia.",
-        "creator": {"@type": "Organization","name": "DineTalk"},
-        "offers": {"@type": "Offer","price":"0.00","priceCurrency":"AUD"}
+        "creator": { "@type": "Organization", "name": "DineTalk" },
+        "offers": { "@type": "Offer", "price": "0.00", "priceCurrency": "AUD" }
       }
-=======
-      <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "Organization",
-          "name": "DineTalk",
-          "url": "https://dinetalk.com.au",
-          "logo": "https://dinetalk.com.au/assets/logo.png",
-          "sameAs": [
-            "https://www.instagram.com/dinetalk_ai",
-            "https://www.linkedin.com/company/dinetalk"
-          ],
-          "contactPoint": {
-            "@type": "ContactPoint",
-            "telephone": "+61 400 000 000",
-            "contactType": "Customer Support",
-            "areaServed": "AU",
-            "availableLanguage": "English"
-          }
-        }
->>>>>>> c51369b09f471c582ae56759b7df62d080221c89
-      </script>
+    </script>
+  </head>
 
-    </head>
+  <body>
+    <div id="root"></div>
 
-    <body>
-      <div id="root"></div>
+    <!-- Netlify hidden form for build-time detection -->
+    <form name="contact" data-netlify="true" netlify hidden>
+      <input type="hidden" name="form-name" value="contact" />
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="tel" name="phone" />
+      <textarea name="message"></textarea>
+    </form>
 
-      <!-- Netlify hidden form for build-time detection -->
-      <form name="contact" data-netlify="true" netlify hidden>
-        <input type="hidden" name="form-name" value="contact" />
-        <input type="text" name="name" />
-        <input type="email" name="email" />
-        <input type="tel" name="phone" />
-        <textarea name="message"></textarea>
-      </form>
-
-      <!-- move non-critical third-party scripts to bottom and defer -->
-      <script defer src="https://assets.calendly.com/assets/external/widget.js"></script>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
-  </html>
-  
+    <!-- move non-critical third-party scripts to bottom and defer -->
+    <script defer src="https://assets.calendly.com/assets/external/widget.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
