Add fallback redirect for Supabase auth code on marketing root

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
     <meta name="theme-color" content="#ff9936" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
+    <script>
+      (function () {
+        // Fallback: if Supabase sends users to the marketing root with an auth code,
+        // forward them into the portal callback route to complete the session exchange.
+        var search = window.location.search || '';
+        if (search.indexOf('code=') !== -1) {
+          var target = '/portal/auth/callback' + search + (window.location.hash || '');
+          window.location.replace(target);
+        }
+      })();
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
